complete course work (delayed commit)